feat: kind 리소스 구성

--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -25,11 +25,9 @@ spec:
         - containerPort: 3000
           name: http
           protocol: TCP
-        env:
-        - name: NEXT_PUBLIC_API_URL
-          value: "http://api-gateway:8080"
-        - name: NODE_ENV
-          value: "production"
+        envFrom:
+        - configMapRef:
+            name: frontend-config
         resources:
           requests:
             memory: "256Mi"
