--- a/k8s/services/auth-service.yaml
+++ b/k8s/services/auth-service.yaml
@@ -1,56 +1,11 @@
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: auth-service-config
-  namespace: mybank
-data:
-  application.yml: |
-    server:
-      port: 8081
-    spring:
-      application:
-        name: auth-service
-      datasource:
-        url: jdbc:postgresql://postgres:5432/mybank_auth
-        username: mybank
-        password: mybank123
-        driver-class-name: org.postgresql.Driver
-      jpa:
-        hibernate:
-          ddl-auto: update
-        properties:
-          hibernate:
-            dialect: org.hibernate.dialect.PostgreSQLDialect
-      data:
-        redis:
-          host: redis
-          port: 6379
-      kafka:
-        bootstrap-servers: kafka:9093
-    eureka:
-      client:
-        service-url:
-          defaultZone: http://service-discovery:8761/eureka/
-        register-with-eureka: true
-        fetch-registry: true
-      instance:
-        prefer-ip-address: true
-    jwt:
-      secret: mybank360-super-secret-key-for-jwt-token-generation-minimum-256-bits
-      expiration: 86400000
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: health,info,metrics,prometheus
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-service
   namespace: mybank
+  labels:
+    app: auth-service
+    tier: backend
 spec:
   replicas: 2
   selector:
@@ -60,19 +15,35 @@ spec:
     metadata:
       labels:
         app: auth-service
+        tier: backend
     spec:
       containers:
         - name: auth-service
           image: mybank/auth-service:latest
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
+              name: http
+              protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: common-config
+            - configMapRef:
+                name: auth-service-config
+            - secretRef:
+                name: common-secret
           env:
-            - name: SPRING_CONFIG_LOCATION
-              value: "file:/config/application.yml"
-          volumeMounts:
-            - name: config
-              mountPath: /config
+            # Override datasource username/password from secret
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: common-secret
+                  key: POSTGRES_USERNAME
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: common-secret
+                  key: POSTGRES_PASSWORD
           resources:
             requests:
               memory: "512Mi"
@@ -86,16 +57,16 @@ spec:
               port: 8081
             initialDelaySeconds: 120
             periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           readinessProbe:
             httpGet:
               path: /auth/health
               port: 8081
             initialDelaySeconds: 90
             periodSeconds: 5
-      volumes:
-        - name: config
-          configMap:
-            name: auth-service-config
+            timeoutSeconds: 3
+            failureThreshold: 3
 
 ---
 apiVersion: v1
@@ -103,6 +74,8 @@ kind: Service
 metadata:
   name: auth-service
   namespace: mybank
+  labels:
+    app: auth-service
 spec:
   type: ClusterIP
   selector:
@@ -110,3 +83,5 @@ spec:
   ports:
     - port: 8081
       targetPort: 8081
+      protocol: TCP
+      name: http
