feat: 로그인 수정, 화면 출력 성공

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       routes:
         # Auth Service (Public - no JWT filter)
         - id: auth-service
-          uri: http://auth-service:8081
+          uri: http://auth-service.mybank.svc.cluster.local:8081
           predicates:
             - Path=/api/v1/auth/**
           filters:
