--- a/app/app/Dockerfile
+++ b/app/app/Dockerfile
@@ -1,21 +1,32 @@
 FROM node:20-alpine AS base
 
-FROM base AS builder
+# Install dependencies only when needed
+FROM base AS deps
 WORKDIR /app
 
+# Copy package files
+COPY package*.json ./
+RUN npm install
+
+# Rebuild the source code only when needed
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-RUN npm install --legacy-peer-deps
+# Build the application
 RUN npm run build
 
+# Production image, copy all the files and run next
 FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
 
-RUN addgroup --system --gid 1001 nodejs && \
-    adduser --system --uid 1001 nextjs
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
 
+# Copy built application
 COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
 COPY --from=builder --chown=nextjs:nodejs /app/node_modules ./node_modules
 COPY --from=builder --chown=nextjs:nodejs /app/package.json ./package.json
