--- a/k8s/services/pfm-core-service.yaml
+++ b/k8s/services/pfm-core-service.yaml
@@ -27,6 +27,7 @@ spec:
               protocol: TCP
           envFrom:
             - configMapRef:
+                name: app-config            - configMapRef:
                 name: common-config
             - configMapRef:
                 name: pfm-core-service-config
