--- a/analytics-service/src/main/resources/application.yml
+++ b/analytics-service/src/main/resources/application.yml
@@ -7,10 +7,12 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://${MONGO_HOST:localhost}:27017/mybank_analytics
-      username: ${MONGO_USERNAME:root}
-      password: ${MONGO_PASSWORD:rootpassword}
-      authentication-database: admin
+      host: ${MONGO_HOST:localhost}
+      port: ${MONGO_PORT:27017}
+      database: mybank_analytics
+      username: ${SPRING_DATA_MONGODB_USERNAME:mybank}
+      password: ${SPRING_DATA_MONGODB_PASSWORD:mybank123}
+      authentication-database: ${SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE:admin}
 
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
@@ -34,6 +36,9 @@ management:
     web:
       exposure:
         include: health,info,prometheus,metrics
+  health:
+    redis:
+      enabled: false
   metrics:
     export:
       prometheus:
