--- a/investment-service/src/main/resources/application.yml
+++ b/investment-service/src/main/resources/application.yml
@@ -7,12 +7,15 @@ spring:
 
   data:
     mongodb:
-      host: localhost
-      port: 27017
+      host: ${MONGO_HOST:localhost}
+      port: ${MONGO_PORT:27017}
       database: mybank_investment
+      username: ${SPRING_DATA_MONGODB_USERNAME:mybank}
+      password: ${SPRING_DATA_MONGODB_PASSWORD:mybank123}
+      authentication-database: ${SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE:admin}
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     consumer:
       group-id: investment-service
       auto-offset-reset: earliest
