--- a/k8s/services/payment-service.yaml
+++ b/k8s/services/payment-service.yaml
@@ -27,6 +27,7 @@ spec:
               protocol: TCP
           envFrom:
             - configMapRef:
+                name: app-config            - configMapRef:
                 name: common-config
             - configMapRef:
                 name: payment-service-config
