--- a/k8s/services/user-service.yaml
+++ b/k8s/services/user-service.yaml
@@ -23,6 +23,7 @@ spec:
               protocol: TCP
           envFrom:
             - configMapRef:
+                name: app-config            - configMapRef:
                 name: common-config
             - configMapRef:
                 name: user-service-config
