--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -5,7 +5,7 @@ USER spring:spring
 
 WORKDIR /app
 
-COPY build/libs/*.jar app.jar
+COPY payment-service/build/libs/payment-service-1.0.0-SNAPSHOT.jar app.jar
 
 EXPOSE 8083
 
