--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: user-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5433/mybank_user
-    username: mybank
-    password: mybank123
+    url: jdbc:postgresql://${POSTGRES_USER_HOST:localhost}:5432/mybank_user
+    username: ${POSTGRES_USERNAME:mybank}
+    password: ${POSTGRES_PASSWORD:mybank123}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -22,11 +22,11 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
 eureka:
   client:
